# NavierStokes

./: CMakeLists.txt
additional_files/: CUDA (2).txt  MPI.txt
include/: BasicSolver.hpp  ConsoleLogger.hpp  ILogger.hpp  SolverFactory.hpp  VelocityPressureSolver.hpp  VelocityPressureSolverOMP.hpp  VorticityStreamFunctionSolver.hpp  VorticityStreamFunctionSolverOMP.hpp
src/: BasicSolver.cpp  ConsoleLogger.cpp  SolverFactory.cpp  VelocityPressureSolver.cpp  VelocityPressureSolverOMP.cpp  VorticityStreamFunctionSolver.cpp  VorticityStreamFunctionSolverOMP.cpp  main.cpp
